After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788584 - Bookmark improperly reappears in tag view
Bookmark improperly reappears in tag view
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Bookmarks
3.24.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-06 07:25 UTC by Michael Catanzaro
Modified: 2017-11-04 19:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bookmarks-popover: fix to prevent unrelated bookmarks from being added to the tag view popover (3.42 KB, patch)
2017-11-03 11:55 UTC, Mal
none Details | Review
bookmarks-popover: Do not add bookmarks to unrelated tag view popovers (3.39 KB, patch)
2017-11-04 18:20 UTC, Mal
committed Details | Review

Description Michael Catanzaro 2017-10-06 07:25:17 UTC
Open bookmarks popover

Switch to tags view

Click on the edit button for a bookmark

Remove the tag from the bookmark. Notice the bookmark (correctly) is removed from the popover.

Add *another* tag to the bookmark.

Expected behavior: the popover contents do not change, since it's an unrelated tag

Actual behavior: the bookmark appears in the tags popover again (incorrect)
Comment 1 Mal 2017-11-03 11:55:32 UTC
Created attachment 362896 [details] [review]
bookmarks-popover: fix to prevent unrelated bookmarks from being added to the tag view popover

The patch prevents unrelated bookmarks from appearing in the popover.

The patch also prevents tags from being duplicated in tags_list_box.  Prior to the patch, newly created tags would appear twice in tags_list_box of the browser instance in which the tag was created.  Note that the tag would not be duplicated in new instances of the browser.
Comment 2 Michael Catanzaro 2017-11-03 18:28:40 UTC
Review of attachment 362896 [details] [review]:

Forgot about this. I'll review it soon. Thanks!

I guess you didn't mean to accept your own patch.
Comment 3 Mal 2017-11-03 19:08:59 UTC
Ok.  Thanks.

Yeah, I noticed that I unintentionally accepted my own patch but could not find a way to edit the status field.
Comment 4 Michael Catanzaro 2017-11-04 01:35:32 UTC
Review of attachment 362896 [details] [review]:

::: src/bookmarks/ephy-bookmarks-popover.c
@@ +99,3 @@
   g_assert (EPHY_IS_BOOKMARK (bookmark));
   g_assert (EPHY_IS_BOOKMARKS_POPOVER (self));
+  

It looks like you added some trailing whitespace on this line.

(Yay, I found a problem this time!)
Comment 5 Michael Catanzaro 2017-11-04 01:40:11 UTC
Review of attachment 362896 [details] [review]:

Also, the first line of the commit message is too long, should be 72 characters max.

I could fix these for you myself, but perhaps you'd like to reword the commit message yourself, since your name will be on it.
Comment 6 Mal 2017-11-04 18:20:24 UTC
Created attachment 362986 [details] [review]
bookmarks-popover: Do not add bookmarks to unrelated tag  view popovers

This new patch removes the trailing whitespace and shortens the first line of the commit message.