bookmarks-popover: Do not add bookmarks to unrelated tag view popovers

https://bugzilla.gnome.org/show_bug.cgi?id=788584